src/test/compile-fail/bad-main.rs
// error-pattern:expected `extern fn(~[str])

fn main(x: int) { }
